--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -1,4 +1,12 @@
 <li id="post_<%= post.id %>" class="<%= post.type.downcase %>">
+  <% if signed_in? %>
+      <% if post.user_id == current_user.id || current_user.admin? %>
+          <div class="actions">
+            <%= link_to 'Edit', '/'+post.type.downcase+'s/'+post.id.to_s+'/edit', :class => 'button' %>
+            <%= link_to 'Delete', post, :method => :delete, :confirm => "Delete Post?", :class => 'button' %>
+          </div>
+      <% end %>
+  <% end %>
   <h4><%= link_to post.title, "/colleges/#{post.college_id}/posts/#{post.id}" %></h4>
   <% unless post.photo_file_name.nil? %>
       <div id="photo_post" class="photo">
@@ -6,20 +14,12 @@
       </div>
   <% end %>
   <div class="content"><%= youtube_embed(post.content) %></div>
-  <%= link_to "News post", post.news if post.news %>
+  <%= link_to "News post", post.news unless post.news.blank? %>
   <div class="comments"><%= post.post_summary %>
     <% if !post.post_summary.nil? && !request.fullpath.include?("posts") %>
         <%= link_to " [more...]", "/colleges/#{post.college_id}/posts/#{post.id}" %>
     <% end %>
   </div>
-  <% if signed_in? %>
-      <% if post.user_id == current_user.id || current_user.admin? %>
-          <div class="actions">
-            <%= link_to 'Edit', '/'+post.type.downcase+'s/'+post.id.to_s+'/edit', :class => 'button' %>
-            <%= link_to image_tag('delete.png'), post, :method => :delete, :confirm => "Delete Post?" %>
-          </div>
-      <% end %>
-  <% end %>
   <%= vote_buttons(post) %>
   <br class="clear"/>
 
