--- a/app/views/smacks/index.html.erb
+++ b/app/views/smacks/index.html.erb
@@ -1,14 +1,13 @@
+<%= render 'shared/search_fields_smacks' %>
 <h1><%= @college.name %> Smacks</h1>
 <ul class="masthead">
   <li><%= link_to "Videos", videos_college_smacks_path(@college) %></li>
   <li><%= link_to "Photos", photos_college_smacks_path(@college) %></li>
   <li><%= link_to "News", news_college_smacks_path(@college) %></li>
   <li><%= link_to "Stats", stats_college_smacks_path(@college) %></li>
+  <li class="righthead"><%= link_to "Add a Smack", new_college_smack_path(@college), :class => "button" %></li>
 </ul>
-<%= link_to "Add a Smack", new_college_smack_path(@college), :class => "button" %>
 <br class="clear"/>
-<%= render 'shared/search_fields_smacks' %>
-
 <% unless @smacks.empty? %>
     <%= will_paginate @smacks %>
     <ul class="posts">
