--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -1,4 +1,4 @@
-<li id="post_<%= post.id %>" class="<%= post.type.downcase %>">
+<li id="post_<%= post.id %>" class="post <%= post.type.downcase %>">
   <% if signed_in? %>
       <% if post.user_id == current_user.id || current_user.admin? %>
           <div class="actions">
