Added Conference, fixed/reworked things.

--- a/app/views/colleges/show.html.erb
+++ b/app/views/colleges/show.html.erb
@@ -1,6 +1,6 @@
 <%= render 'shared/search_fields' %>
 <h1><%= @college.name %></h1>
-<%= render :partial => 'masthead' %>
+<%= render :partial => 'shared/masthead' %>
 <br class="clear"/>
 <% unless @posts.empty? %>
     <%= will_paginate @posts %>
