--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -1,19 +1,17 @@
-<% user = User.find(comment.user_id)%>
-<tr id = "comments">
-	<td width = 15% id = "comments"class ="post">
-		<span class="timestamp">
-			Posted <%= time_ago_in_words(comment.created_at) %> ago by <%= user.username %>.
-			</span>
-		</td>
-		<td id = "comments" class ="post">
-			<span class="content"><%= comment.comment %></span>	
-		</td>
-		<% if signed_in? %>
-		<% if comment.user_id == current_user.id || current_user.admin? %>	
-		<td width = 10% id = "comments" class = "delete_comment">
-		<%=button_to "edit", "/comments/#{comment.id}/edit", :method => :get %></td>
-		<td width = 10% id ="comments" class = "delete_comment">
-		<%= link_to image_tag('delete.png'), comment, :method => :delete, :confirm => "Delete Comment?", :remote => true, :class => "del" %></td>
-		<% end %>
-		<% end %>						
-	</tr>
+<div class="comment">
+  <div class="content">
+    <div class="timestamp">
+      Posted <%= time_ago_in_words(comment.created_at) %> ago by <%= comment.user.username %>.
+    </div>
+    <p><%= comment.comment %></p>
+  </div>
+  <div class="actions">
+    <% if can? :edit, comment %>
+        <%= link_to 'Edit', edit_comment_path(comment), :class => 'button' %>
+    <% end %>
+    <% if can? :destroy, comment %>
+        <%= link_to 'Delete', comment, :method => :delete, :confirm => "Delete Comment?", :class => 'button' %>
+    <% end %>
+  </div>
+  <br style="clear:both"/>
+</div>
