--- a/app/views/layouts/_left_sidebar.html.erb
+++ b/app/views/layouts/_left_sidebar.html.erb
@@ -1,22 +1,15 @@
 <div class="left sidebar">
   <div id="nav_list">
     <ul id="nav">
-      <li><b><%= link_to "ACC" %></b>
-        <ul>
-          <% @college_acc = College.where("conference = ?", "ACC") %>
-          <% @college_acc.each do |college| %>
-              <li class="side_nav"><%= link_to college.name, college %></li>
-          <% end %>
-        </ul>
-      </li>
-      <li><b><%= link_to "SEC" %></b>
-        <ul>
-          <% @college_sec = College.where("conference = ?", "SEC") %>
-          <% @college_sec.each do |college| %>
-              <li><%= link_to college.name, college %></li>
-          <% end %>
-        </ul>
-      </li>
+      <% Conference.all.each do |conference| %>
+          <li><b><%= link_to conference.name, conference %></b>
+            <ul>
+              <% conference.colleges.each do |college| %>
+                  <li class="side_nav"><%= link_to college.name, college %></li>
+              <% end %>
+            </ul>
+          </li>
+      <% end %>
     </ul>
   </div>
 </div>
