--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,6 +1,10 @@
 <% if can? :edit, @post %>
     <div class="actions">
-      <%= link_to 'Edit', '/'+@post.type.downcase+'s/'+@post.id.to_s+'/edit', :class => 'button' %>
+      <% if @post.type == "Smack"%>
+        <%= link_to 'Edit', edit_college_smack_path(@parent, @post), :class => 'button' %>
+      <% else %>
+        <%= link_to 'Edit', edit_college_redemption_path(@parent, @post), :class => 'button' %>
+      <% end %>
       <%= link_to 'Delete', @post, :method => :delete, :confirm => "Delete Post?", :class => 'button' %>
     </div>
 <% end %>
@@ -11,20 +15,20 @@
     <%= vote_buttons(@post, :small) %>
     <br class="clear"/>
   </div>
-
-  <% unless @post.photo_file_name.nil? %>
+  <% if @post.photo %>
       <div class="photo">
         <img src="<%= @post.photo.url(:large) %>" alt=""/>
       </div>
   <% end %>
-  <div class="content"><%= youtube_embed(@post.content, true) %></div>
-  <div class="comments"><%= @post.post_summary %>
-    <% if !@post.post_summary.nil? && !request.fullpath.include?("posts") %>
-        <%= link_to " [more...]", "/colleges/#{@post.college_id}/posts/#{@post.id}" %>
+  <% if @post.video %>
+      <div class="content"><%= youtube_embed(@post.video.url, true) %></div>
+  <% end %>
+  <div class="comments"><%= @post.summary %>
+    <% if @post.summary && params[:action] != 'show' %>
+        <%= link_to " [more...]", [@parent, @post] %>
     <% end %>
   </div>
   <br class="clear"/>
-
   <% if signed_in? %>
       <%= form_for [@post, Comment.new], :remote => true do |f| %>
           <%= render '/shared/comments', :f => f %>
@@ -35,9 +39,7 @@
   <% end %>
   <h2>Comments:</h2>
   <%= will_paginate(@comments) %>
-  <table class="comments">
-    <tbody>
+  <div class="comments">
     <%= render :partial => @post.comments %>
-    </tbody>
-  </table>
+  </div>
 </div>
