--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,5 +1,5 @@
 <h1><%= @user.username %> Posts</h1>
-<%= render 'search_fields' %>
+<%= render 'shared/search_fields' %>
 <% unless @posts.empty? %>
     <%= will_paginate @posts %>
     <ul class="posts">
