--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -5,7 +5,7 @@
 <%= render 'fields', :f => f %>
 <div class="actions">
 	<%= f.submit "Sign up" %> 
-</div>
+</div></br></br>
 <% end %>
 
 <%= render :partial => "users/shared/links" %>
