--- a/public/stylesheets/new.css
+++ b/public/stylesheets/new.css
@@ -659,6 +659,7 @@ div.field, div.actions {
     margin-bottom: 10px;
 }
 
+
 .left {
     float: left;
 }
@@ -847,7 +848,7 @@ div.post .content {
     padding: 10px 0;
 }
 div.actions {
-    float: right;
+    float: left;
 }
 
 textarea.comment { width: 500px; height: 100px; border: 3px solid #cccccc; padding: 5px;}
