--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -7,6 +7,7 @@
 <h1>Most smacked colleges</h1>
 <ul class="colleges">
   <% @colleges.each do |college| %>
-      <li><%= link_to college.name, college %> (<%= college.number_of_smacks %>)</li>
+      <li><%= link_to college.name, college %> (<%= college.smacks_count %>/<%= college.redemptions_count %>)</li>
   <% end %>
 </ul>
+<%= link_to "See full list", conferences_path, :class => :button%>
