--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -10,7 +10,7 @@
         <%= link_to 'Edit', edit_comment_path(comment), :class => 'button' %>
     <% end %>
     <% if can? :destroy, comment %>
-        <%= link_to 'Delete', comment, :method => :delete, :confirm => "Delete Comment?", :class => 'button' %>
+        <%= link_to 'Delete', comment, :method => :delete, :remote => true, :confirm => "Delete Comment?", :class => 'button' %>
     <% end %>
   </div>
   <br style="clear:both"/>
